After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 694533 - GdMainView::view-type should be a construct property
GdMainView::view-type should be a construct property
Status: RESOLVED FIXED
Product: libgd
Classification: Platform
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: libgd maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-02-23 15:26 UTC by Giovanni Campagna
Modified: 2013-04-04 14:31 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Giovanni Campagna 2013-02-23 15:26:03 UTC
Otherwise, it doesn't get set if not passed explicitly at the constructor.
And if not set, any attempt to set a model segfaults.
Comment 1 Cosimo Cecchi 2013-04-04 14:31:13 UTC
Thanks, I pushed a fix for this in libgd master.