main-view: make view-type a construct property

Or it won't be properly set when instatiating a view with
g_object_new().

https://bugzilla.gnome.org/show_bug.cgi?id=694533